--- a/MachineLearningDemo/Info.plist
+++ b/MachineLearningDemo/Info.plist
@@ -42,4 +42,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string
+	<string>Need Camera for demo</string>
+</dict>
+</plist>
